--- a/style.css
+++ b/style.css
@@ -93,3 +93,11 @@ main {
   background-position: center;
   justify-content: space-between;
 }
+
+.three {
+  background-image: url(./3.Subscribesion_\(29-dec-21-UIDesignDaily\)/day_1518.png);
+  background-repeat: no-repeat;
+  background-size: 90%;
+  background-position: center;
+  justify-content: space-between;
+}
